added components to display employee data from api call

--- a/empdir/src/App.css
+++ b/empdir/src/App.css
@@ -13,9 +13,8 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  background-color: navy;
   display: flex;
   flex-direction: column;
   align-items: center;
