--- a/empdir/src/styles/App.css
+++ b/empdir/src/styles/App.css
@@ -2,10 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -22,7 +22,30 @@ header {
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.navbar {
+  padding: 20px 25px;
+  margin: 0 auto;
+}
 
+.navbar-collapse {
+  margin: 0 auto;
+  justify-content: center;
+  align-items: flex-start;
+}
+h2{
+  color:navy;
+  padding-top: 20px;
+}
+.form-control {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px 25px 20px 20px;
+}
+col{
+color: blanchedalmond;
+}
 .App-link {
   color: #61dafb;
 }
