--- a/empdir/src/styles/EmployeeStyle.css
+++ b/empdir/src/styles/EmployeeStyle.css
@@ -1,4 +1,4 @@
-App {
+#root{
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,6 +9,11 @@ App {
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
+  }
+  tr{
+      color: navy;
+      text-align: center;
+      scroll-padding-top: 50px;
   }
   
   .font-color {
